--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@
 /Day 17/Day 17 Notes.py
 /Day 17/Day 17 Quiz Game/
 /Day 20 and 21 = Snake/day-21-notes.py
-/Day 25/weather_data.csv
+/Day 25 - US States Game and Squirrel Data/weather_data.csv
+/Day 26/US States Game/
