Day 48 - completed course challenge 1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-/Day 46 - Spotify Playlist/secretstuff.py
-/Day 46 - Spotify Playlist/token.txt
+Day 46 - Spotify Playlist/secretstuff.py
+Day 46 - Spotify Playlist/token.txt
+Day 48 - Selenium Cookie Clicker Bot/using_selenium.py
